DUMB: support tex fonts

        - don't let iso14755 or mouse reporting get into the way of perl
          (could lead to global grabs never being cleared).
        - experimental OnTheSpot editing support (-pe xim-onthespot).
        - moved Shift-Button2 paste combination to Meta-Button2.
        - the cutchars resource will now be respected and used by the
          selection extension.
        - added the "remote-selection" extension which just runs external
          commands to fetch and store the selection data.
        - removed (unused) arabic presentation form composing sequences.
        - be more strict when deciding that a core font glyph is too wide and
          needs the careful rendering mode.
        - allow more leeway for italic fonts when deciding that a character is
          too wide and needs careful mode.
        - redraw even more characters around characters usign careful mode.
        - reduced number of server turnarounds at startup by allocating
          atoms only once per display.
        - changed version sos (ESC [ > c) response to be more compatible with
          xterm.

7.2  Sun Jan 22 21:58:16 CET 2006
        - bugfix: urxvt (not urxvtd) did not correctly handle multiple
          environments necessary, which resulted in segfaults within
          getenv (reproducable: urxvt -fn 9x15, open a menu once,
          ctrl-shift-672c).
        - bugfix: the selection speedup in in 7.1 unfortunately caused
          non-ascii characters to enlarge/move the selection.
        - bugfix: resizing sometimes leaked lines from the secondary to
          the primary screen.
        - bugfix: reducing window size while large amounts of text were output
          could lead to an assertion failure.
        - added "tabbed" extension that provides a crude tabbed terminal.
        - added "readline" extension that allows cursor positioning
          via mouse clicks.
	- now it is possible to insert the value of the CLIPBOARD selection