@@ -75,9 +75,7 @@ sub fetch {
             $self->selection_clear;
             $self->selection ($txt);
             $self->selection_grab (urxvt::CurrentTime);
-            close $fh;
-            my $status = $? >> 8;
-            $self->msg ("selection fetched (status $status)");
+            $self->msg ("selection fetched");
          }
       });
    }
@@ -102,7 +100,7 @@ sub on_start {
    ()
 }
 
-sub on_keyboard_command {
+sub on_user_command {
    my ($self, $cmd) = @_;
 
    if ($cmd eq "selection-pastebin:remote-pastebin") {
